content/en/examples/access/manifest-admission-control/vap-min-replicas.yaml
---
{
  apiVersion: "admissionregistration.k8s.io/v1",
  kind: "ValidatingAdmissionPolicy",
  metadata: {
    name: "enforce-multiple-replicas-deployments",
    annotations: {
      kubernetes.io/description: "Require that matching Deployments have multiple replicas",
    },
  },
  spec: {
    matchConstraints: {
      resourceRules: [{
        apiGroups: [
          "apps",
        ],
        apiVersions: [
          "v1",
        ],
        resources: [
          # the Deployment API
          "deployments",
        ],
        operations: [
          # the API verbs, converted to upper case
          "CREATE",
          "UPDATE",
        ],
      }],
    },
    validations: [{
      expression: "object.spec.replicas >= 2",
    }],
  },
}
